scroll manga when expanded

--- a/resources/main.html
+++ b/resources/main.html
@@ -500,7 +500,8 @@
                     <a class=thumbnail-link href=#>
                         <img class=thumb>
                     </a>
-
+                </div>
+                <div class=thumbnail-inner style="overflow: unset;">
                     <div class="thumbnail-label" hidden><span class=label></span></div>
                     <div class=thumbnail-bottom-left>
                         <div class="heart button-bookmark public bookmarked" hidden>
